--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,8 @@ services:
     depends_on:
       - phpipam-mariadb
     networks:
-      - phpipam-network
+      phpipam-network:
+        ipv4_address: 192.168.100.10
 
   phpipam-cron:
     image: phpipam/phpipam-cron:latest
@@ -32,7 +33,8 @@ services:
     depends_on:
       - phpipam-mariadb
     networks:
-      - phpipam-network
+      phpipam-network:
+        ipv4_address: 192.168.100.11
 
   phpipam-mariadb:
     build: .
@@ -45,7 +47,8 @@ services:
       - phpipam-db-data:/var/lib/mariadb
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
-      - phpipam-network
+      phpipam-network:
+        ipv4_address: 192.168.100.12
 
 volumes:
   phpipam-db-data:
@@ -54,3 +57,8 @@ volumes:
 
 networks:
   phpipam-network:
+    driver: bridge
+    ipam:
+      config:
+        - subnet: ${CUSTOM_NETWORK_SUBNET}
+          gateway: ${CUSTOM_NETWORK_GATEWAY}
